<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.TransactionResultFragment"
    android:animateLayoutChanges="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/transaction_result_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="@string/transaction_result_header_success"
                android:textColor="@color/transaction_success_color"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/transaction_result_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="40dp"
                android:text="@string/transaction_result_message_success"
                android:textColor="@color/product_text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/transaction_result_order_detail_title"
                android:textColor="@color/product_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/transaction_result_invoice_no_title"
                    android:textColor="@color/product_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_transaction_invoice_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:lines="1"
                    android:text=""
                    android:textColor="@color/product_text_color"
                    android:textIsSelectable="true"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/transaction_result_amount_title"
                    android:textColor="@color/product_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:text="0.00"
                    android:textColor="@color/product_text_color"
                    android:textIsSelectable="true"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/transaction_result_date_time_title"
                    android:textColor="@color/product_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_transaction_datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/product_text_color"
                    android:textIsSelectable="true"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/transaction_result_payment_type_title"
                    android:textColor="@color/product_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_transaction_payment_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/product_text_color"
                    android:textIsSelectable="true"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/transaction_result_masked_pan_title"
                    android:textColor="@color/product_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_transaction_masked_pan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/product_text_color"
                    android:textIsSelectable="true"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/transaction_result_status_title"
                    android:textColor="@color/product_text_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_transaction_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:text="Success"
                    android:textColor="@color/transaction_success_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/transaction_result_expand_title"
                    android:textColor="@color/product_text_color"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/ib_payment_inquiry_response_expand"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_arrow_response_expand" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_payment_inquiry_response"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:textColor="@color/product_text_color"
                android:textIsSelectable="true"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/feature_category_close"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>